--- a/strand/iOS/Strand/Strand/DFPhotoFeedFooterCell.xib
+++ b/strand/iOS/Strand/Strand/DFPhotoFeedFooterCell.xib
@@ -37,8 +37,8 @@
                             <action selector="likeButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="hfa-Nv-Ji6"/>
                         </connections>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="WYx-je-qmB" userLabel="moreOptionsButton" customClass="DFRoundedButton">
-                        <rect key="frame" x="286" y="5" width="30" height="24"/>
+                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="WYx-je-qmB" userLabel="moreOptionsButton" customClass="DFRoundedButton">
+                        <rect key="frame" x="286" y="4" width="30" height="24"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" type="system" pointSize="26"/>
                         <state key="normal" title="...">
