--- a/strand/iOS/Strand/Strand/DFSwipableSuggestionViewController.xib
+++ b/strand/iOS/Strand/Strand/DFSwipableSuggestionViewController.xib
@@ -35,9 +35,20 @@
                     <rect key="frame" x="0.0" y="90" width="600" height="490"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UYI-Rc-QVa">
+                    <rect key="frame" x="333" y="34" width="16" height="22"/>
+                    <state key="normal" image="Assets/Icons/AddPersonButtonIcon.png">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="addPersonButtonPressed:" destination="-1" eventType="touchUpInside" id="BiB-b7-vgq"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="UYI-Rc-QVa" firstAttribute="leading" secondItem="BkW-lL-hsr" secondAttribute="trailing" constant="8" id="4A7-uf-PvL"/>
+                <constraint firstItem="BkW-lL-hsr" firstAttribute="centerY" secondItem="UYI-Rc-QVa" secondAttribute="centerY" constant="0.5" id="5Dw-NI-fE5"/>
                 <constraint firstItem="BkW-lL-hsr" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="AUp-5O-Ctk" secondAttribute="leading" constant="10" id="A4Z-iX-hYr"/>
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="BkW-lL-hsr" secondAttribute="trailing" constant="10" id="SN2-il-GJ8"/>
                 <constraint firstAttribute="bottom" secondItem="YTX-Vv-qtQ" secondAttribute="bottom" constant="20" id="TmF-uI-wGb"/>
@@ -51,4 +62,7 @@
             <point key="canvasLocation" x="628" y="487"/>
         </view>
     </objects>
+    <resources>
+        <image name="Assets/Icons/AddPersonButtonIcon.png" width="16" height="16"/>
+    </resources>
 </document>
