--- a/strand/iOS/Strand/Strand/DFSwipableSuggestionViewController.xib
+++ b/strand/iOS/Strand/Strand/DFSwipableSuggestionViewController.xib
@@ -10,6 +10,7 @@
                 <outlet property="addRecipientButton" destination="UYI-Rc-QVa" id="BW8-Ah-Abn"/>
                 <outlet property="bottomLabel" destination="RRW-PK-CfC" id="gs9-7a-tJq"/>
                 <outlet property="cardinalImageView" destination="YTX-Vv-qtQ" id="8s2-Tk-5Wh"/>
+                <outlet property="peopleLabel" destination="RRW-PK-CfC" id="hpd-id-cMy"/>
                 <outlet property="profileStackView" destination="BkW-lL-hsr" id="KUf-zp-AfQ"/>
                 <outlet property="view" destination="AUp-5O-Ctk" id="G5C-sf-kMR"/>
             </connections>
@@ -19,13 +20,8 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="People" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RRW-PK-CfC">
-                    <rect key="frame" x="36" y="543" width="48" height="18"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <view contentMode="scaleToFill" horizontalCompressionResistancePriority="999" translatesAutoresizingMaskIntoConstraints="NO" id="BkW-lL-hsr" customClass="DFProfileStackView">
-                    <rect key="frame" x="275" y="20" width="50" height="50"/>
+                    <rect key="frame" x="275" y="37" width="50" height="50"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="jRs-Lb-yJl"/>
@@ -33,11 +29,11 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YTX-Vv-qtQ" customClass="DFCardinalImageView">
-                    <rect key="frame" x="0.0" y="90" width="600" height="490"/>
+                    <rect key="frame" x="0.0" y="97" width="600" height="483"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UYI-Rc-QVa">
-                    <rect key="frame" x="333" y="34" width="16" height="22"/>
+                    <rect key="frame" x="333" y="51" width="16" height="22"/>
                     <state key="normal" image="Assets/Icons/AddPersonButtonIcon.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -45,26 +41,29 @@
                         <action selector="addPersonButtonPressed:" destination="-1" eventType="touchUpInside" id="BiB-b7-vgq"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Send to:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SGM-FR-1xZ">
-                    <rect key="frame" x="201" y="34" width="66" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="999" verticalCompressionResistancePriority="1000" text="Send to Aseem" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RRW-PK-CfC">
+                    <rect key="frame" x="8" y="8" width="584" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="lDV-LD-XsM"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="RRW-PK-CfC" firstAttribute="leading" secondItem="AUp-5O-Ctk" secondAttribute="leading" constant="8" id="04e-Zm-05M"/>
                 <constraint firstItem="UYI-Rc-QVa" firstAttribute="leading" secondItem="BkW-lL-hsr" secondAttribute="trailing" constant="8" id="4A7-uf-PvL"/>
                 <constraint firstItem="BkW-lL-hsr" firstAttribute="centerY" secondItem="UYI-Rc-QVa" secondAttribute="centerY" constant="0.5" id="5Dw-NI-fE5"/>
                 <constraint firstItem="BkW-lL-hsr" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="AUp-5O-Ctk" secondAttribute="leading" constant="10" id="A4Z-iX-hYr"/>
-                <constraint firstItem="BkW-lL-hsr" firstAttribute="leading" secondItem="SGM-FR-1xZ" secondAttribute="trailing" constant="8" id="OzT-IX-TCU"/>
+                <constraint firstItem="RRW-PK-CfC" firstAttribute="top" secondItem="AUp-5O-Ctk" secondAttribute="top" constant="8" id="A4j-Tm-mI3"/>
+                <constraint firstAttribute="trailing" secondItem="RRW-PK-CfC" secondAttribute="trailing" constant="8" id="C3z-Us-29h"/>
+                <constraint firstItem="BkW-lL-hsr" firstAttribute="top" secondItem="RRW-PK-CfC" secondAttribute="bottom" constant="8" id="CuH-L8-iwS"/>
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="BkW-lL-hsr" secondAttribute="trailing" constant="10" id="SN2-il-GJ8"/>
                 <constraint firstAttribute="bottom" secondItem="YTX-Vv-qtQ" secondAttribute="bottom" constant="20" id="TmF-uI-wGb"/>
                 <constraint firstAttribute="centerX" secondItem="BkW-lL-hsr" secondAttribute="centerX" id="WbD-sw-OkY"/>
                 <constraint firstAttribute="trailing" secondItem="YTX-Vv-qtQ" secondAttribute="trailing" id="fAi-C9-zgU"/>
-                <constraint firstItem="BkW-lL-hsr" firstAttribute="centerY" secondItem="SGM-FR-1xZ" secondAttribute="centerY" constant="0.5" id="kyO-h6-wuD"/>
-                <constraint firstItem="YTX-Vv-qtQ" firstAttribute="top" secondItem="BkW-lL-hsr" secondAttribute="bottom" constant="20" id="nJ1-5L-7Zu"/>
-                <constraint firstItem="BkW-lL-hsr" firstAttribute="top" secondItem="AUp-5O-Ctk" secondAttribute="top" constant="20" id="uBx-He-ZVm"/>
+                <constraint firstItem="YTX-Vv-qtQ" firstAttribute="top" secondItem="BkW-lL-hsr" secondAttribute="bottom" constant="10" id="nJ1-5L-7Zu"/>
                 <constraint firstItem="YTX-Vv-qtQ" firstAttribute="leading" secondItem="AUp-5O-Ctk" secondAttribute="leading" id="zXH-uS-afS"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
